--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 .version.index /* version checker */
 {
-	color: #0000E7;
-	background-color: #A5B030;
+	color: #000001;
+	background-color: #B21D32;
 }
 
 .html
@@ -23,9 +23,9 @@
 	padding: 62px 20px;
 }
 
-#menuu158
+#menuu911
 {
-	z-index: 2;
+	z-index: 25;
 	width: 1880px;
 	border-style: none;
 	border-color: transparent;
@@ -33,26 +33,26 @@
 	position: relative;
 }
 
-#u166
+#u947
 {
-	width: 468px;
+	width: 374px;
 	min-height: 52px;
 	background-color: transparent;
 	position: relative;
 	margin-right: -10000px;
 }
 
-#u167
+#u950
 {
-	width: 468px;
+	width: 374px;
 	background-color: #C4C4C4;
 	padding-bottom: 35px;
 	position: relative;
 }
 
-#u168-4
+#u953-4
 {
-	width: 468px;
+	width: 374px;
 	min-height: 17px;
 	border-style: none;
 	border-color: transparent;
@@ -66,61 +66,120 @@
 	left: 0px;
 }
 
-#u167:hover #u168-4
+#u950:hover #u953-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 468px;
+	width: 374px;
 	margin: 0px -10000px 0px 0px;
 }
 
-#u167:active #u168-4
+#u950:active #u953-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 468px;
+	width: 374px;
 	margin: 0px -10000px 0px 0px;
 }
 
-#u193
+#u919
 {
-	width: 468px;
+	width: 374px;
 	min-height: 52px;
 	background-color: transparent;
 	position: relative;
 	margin-right: -10000px;
-	left: 470px;
+	left: 376px;
 }
 
-#u194
+#u920
 {
-	width: 468px;
+	width: 374px;
 	background-color: #C4C4C4;
 	padding-bottom: 35px;
 	position: relative;
 }
 
-#u167.MuseMenuActive,#u194:hover
+#u950.MuseMenuActive,#u920:hover
 {
 	background-color: #999999;
-	width: 468px;
+	width: 374px;
 	min-height: 0px;
 	margin: 0px;
 }
 
-#u194:active
+#u923-4
+{
+	width: 374px;
+	min-height: 17px;
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	text-align: center;
+	color: #FFFFFF;
+	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
+	position: relative;
+	margin-right: -10000px;
+	top: 17px;
+}
+
+#u950.MuseMenuActive #u953-4,#u920:hover #u923-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 374px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u920:active #u923-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 374px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u940
+{
+	width: 374px;
+	min-height: 52px;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+	left: 752px;
+}
+
+#u943
+{
+	width: 374px;
+	background-color: #C4C4C4;
+	padding-bottom: 35px;
+	position: relative;
+}
+
+#u943:hover
+{
+	background-color: #999999;
+	width: 374px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u920:active,#u943:active
 {
 	background-color: #6B6B6B;
-	width: 468px;
+	width: 374px;
 	min-height: 0px;
 	margin: 0px;
 }
 
-#u197-4
+#u945-4
 {
-	width: 468px;
+	width: 374px;
 	min-height: 17px;
 	border-style: none;
 	border-color: transparent;
@@ -133,176 +192,62 @@
 	top: 17px;
 }
 
-#u167.MuseMenuActive #u168-4,#u194:hover #u197-4
+#u920.MuseMenuActive #u923-4,#u943:hover #u945-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 468px;
+	width: 374px;
 	margin: 0px -10000px 0px 0px;
 }
 
-#u194:active #u197-4
+#u943:active #u945-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 468px;
+	width: 374px;
 	margin: 0px -10000px 0px 0px;
 }
 
-#u194.MuseMenuActive #u197-4
+#u943.MuseMenuActive #u945-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 468px;
+	width: 374px;
 	margin: 0px -10000px 0px 0px;
 }
 
-#u198
+#u912
 {
-	width: 120px;
-	background-color: transparent;
-	top: 52px;
-}
-
-#u334
-{
-	width: 118px;
-	border-width: 1px;
-	border-style: solid;
-	border-color: #777777;
-	background-color: #FFFFFF;
-	padding-bottom: 4px;
-	position: relative;
-	margin-right: -10000px;
-}
-
-#u336-4
-{
-	width: 110px;
-	min-height: 13px;
-	background-color: transparent;
-	padding-left: 2px;
-	padding-top: 4px;
-	padding-right: 2px;
-	font-size: 11px;
-	text-align: center;
-	line-height: 13px;
-	position: relative;
-	margin-right: -10000px;
-	top: 2px;
-	left: 2px;
-}
-
-#u334:hover #u336-4
-{
-	padding-top: 4px;
-	padding-bottom: 0px;
-	min-height: 13px;
-	width: 110px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u338
-{
-	width: 120px;
-	background-color: transparent;
-	left: 120px;
-}
-
-#u199,#u333,#u339,#u340
-{
-	width: 120px;
-	background-color: transparent;
-	position: relative;
-}
-
-#u341
-{
-	width: 118px;
-	border-width: 1px;
-	border-style: solid;
-	border-color: #777777;
-	background-color: #FFFFFF;
-	padding-bottom: 4px;
-	position: relative;
-	margin-right: -10000px;
-}
-
-#u334:hover,#u341:hover
-{
-	background-color: #AAAAAA;
-	width: 118px;
-	min-height: 0px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u343-4
-{
-	width: 110px;
-	min-height: 13px;
-	background-color: transparent;
-	padding-left: 2px;
-	padding-top: 4px;
-	padding-right: 2px;
-	font-size: 11px;
-	text-align: center;
-	line-height: 13px;
-	position: relative;
-	margin-right: -10000px;
-	top: 2px;
-	left: 2px;
-}
-
-#u334.MuseMenuActive #u336-4,#u341:hover #u343-4
-{
-	padding-top: 4px;
-	padding-bottom: 0px;
-	min-height: 13px;
-	width: 110px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u341.MuseMenuActive #u343-4
-{
-	padding-top: 4px;
-	padding-bottom: 0px;
-	min-height: 13px;
-	width: 110px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u206
-{
-	width: 469px;
+	width: 375px;
 	min-height: 52px;
 	background-color: transparent;
 	position: relative;
 	margin-right: -10000px;
-	left: 940px;
+	left: 1128px;
 }
 
-#u209
+#u913
 {
-	width: 469px;
+	width: 375px;
 	background-color: #C4C4C4;
 	padding-bottom: 35px;
 	position: relative;
 }
 
-#u209:hover
+#u913:hover
 {
 	background-color: #999999;
-	width: 469px;
+	width: 375px;
 	min-height: 0px;
 	margin: 0px;
 }
 
-#u212-4
+#u915-4
 {
-	width: 469px;
+	width: 375px;
 	min-height: 17px;
 	border-style: none;
 	border-color: transparent;
@@ -315,61 +260,61 @@
 	top: 17px;
 }
 
-#u209:hover #u212-4
+#u913:hover #u915-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 469px;
+	width: 375px;
 	margin: 0px -10000px 0px 0px;
 }
 
-#u209:active #u212-4
+#u913:active #u915-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 469px;
+	width: 375px;
 	margin: 0px -10000px 0px 0px;
 }
 
-#u180
+#u999
 {
-	width: 469px;
+	width: 375px;
 	min-height: 52px;
 	background-color: transparent;
 	position: relative;
 	margin-right: -10000px;
-	left: 1411px;
+	left: 1505px;
 }
 
-#u181
+#u1002
 {
-	width: 469px;
+	width: 375px;
 	background-color: #C4C4C4;
 	padding-bottom: 35px;
 	position: relative;
 }
 
-#u181:hover
+#u1002:hover
 {
 	background-color: #999999;
-	width: 469px;
+	width: 375px;
 	min-height: 0px;
 	margin: 0px;
 }
 
-#u209:active,#u181:active
+#u913:active,#u1002:active
 {
 	background-color: #6B6B6B;
-	width: 469px;
+	width: 375px;
 	min-height: 0px;
 	margin: 0px;
 }
 
-#u184-4
+#u1003-4
 {
-	width: 469px;
+	width: 375px;
 	min-height: 17px;
 	border-style: none;
 	border-color: transparent;
@@ -382,30 +327,30 @@
 	top: 17px;
 }
 
-#u209.MuseMenuActive #u212-4,#u181:hover #u184-4
+#u913.MuseMenuActive #u915-4,#u1002:hover #u1003-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 469px;
+	width: 375px;
 	margin: 0px -10000px 0px 0px;
 }
 
-#u181:active #u184-4
+#u1002:active #u1003-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 469px;
+	width: 375px;
 	margin: 0px -10000px 0px 0px;
 }
 
-#u181.MuseMenuActive #u184-4
+#u1002.MuseMenuActive #u1003-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 469px;
+	width: 375px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -414,20 +359,76 @@
 	cursor: pointer;
 }
 
+#u907-4
+{
+	z-index: 7;
+	width: 1617px;
+	min-height: 13px;
+	background-color: transparent;
+	font-size: 95px;
+	line-height: 114px;
+	margin-left: 132px;
+	margin-top: 96px;
+	position: relative;
+}
+
+#u908-4
+{
+	z-index: 11;
+	width: 232px;
+	min-height: 30px;
+	background-color: transparent;
+	font-size: 28px;
+	line-height: 34px;
+	margin-left: 1517px;
+	position: relative;
+}
+
+#u909-4
+{
+	z-index: 15;
+	width: 1738px;
+	min-height: 22px;
+	background-color: transparent;
+	font-size: 31px;
+	line-height: 37px;
+	margin-left: 71px;
+	margin-top: 62px;
+	position: relative;
+}
+
+#u910-6
+{
+	z-index: 19;
+	width: 1738px;
+	min-height: 106px;
+	background-color: transparent;
+	font-size: 31px;
+	line-height: 37px;
+	margin-left: 71px;
+	margin-top: 41px;
+	position: relative;
+}
+
+#u910,#u910-3
+{
+	font-size: 31px;
+}
+
 #u239-4
 {
-	z-index: 44;
+	z-index: 3;
 	width: 151px;
 	min-height: 50px;
 	background-color: transparent;
 	margin-left: 1699px;
-	margin-top: 808px;
+	margin-top: 367px;
 	position: relative;
 }
 
 #u237
 {
-	z-index: 43;
+	z-index: 2;
 	width: 150px;
 	min-height: 30px;
 	border-style: none;
