--- a/css/tools.css
+++ b/css/tools.css
@@ -1,7 +1,7 @@
 .version.tools /* version checker */
 {
-	color: #00001D;
-	background-color: #ACE923;
+	color: #0000F4;
+	background-color: #2C3405;
 }
 
 .html
@@ -35,7 +35,7 @@
 
 #u426
 {
-	width: 468px;
+	width: 374px;
 	min-height: 52px;
 	background-color: transparent;
 	position: relative;
@@ -44,7 +44,7 @@
 
 #u427
 {
-	width: 468px;
+	width: 374px;
 	background-color: #C4C4C4;
 	padding-bottom: 35px;
 	position: relative;
@@ -53,14 +53,14 @@
 #u427:hover
 {
 	background-color: #999999;
-	width: 468px;
+	width: 374px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u429-4
 {
-	width: 468px;
+	width: 374px;
 	min-height: 17px;
 	border-style: none;
 	border-color: transparent;
@@ -78,7 +78,7 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 468px;
+	width: 374px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -87,23 +87,23 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 468px;
+	width: 374px;
 	margin: 0px -10000px 0px 0px;
 }
 
 #u398
 {
-	width: 468px;
+	width: 374px;
 	min-height: 52px;
 	background-color: transparent;
 	position: relative;
 	margin-right: -10000px;
-	left: 470px;
+	left: 376px;
 }
 
 #u415
 {
-	width: 468px;
+	width: 374px;
 	background-color: #C4C4C4;
 	padding-bottom: 35px;
 	position: relative;
@@ -112,7 +112,7 @@
 #u415:hover
 {
 	background-color: #999999;
-	width: 468px;
+	width: 374px;
 	min-height: 0px;
 	margin: 0px;
 }
@@ -120,14 +120,14 @@
 #u427:active,#u415:active
 {
 	background-color: #6B6B6B;
-	width: 468px;
+	width: 374px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u416-4
 {
-	width: 468px;
+	width: 374px;
 	min-height: 17px;
 	border-style: none;
 	border-color: transparent;
@@ -145,7 +145,7 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 468px;
+	width: 374px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -154,154 +154,39 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 468px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u415.MuseMenuActive #u416-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 468px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u399
-{
-	width: 120px;
-	background-color: transparent;
-	top: 52px;
-}
-
-#u402
-{
-	width: 118px;
-	border-width: 1px;
-	border-style: solid;
-	border-color: #777777;
-	background-color: #FFFFFF;
-	padding-bottom: 4px;
-	position: relative;
-	margin-right: -10000px;
-}
-
-#u404-4
-{
-	width: 110px;
-	min-height: 13px;
-	background-color: transparent;
-	padding-left: 2px;
-	padding-top: 4px;
-	padding-right: 2px;
-	font-size: 11px;
-	text-align: center;
-	line-height: 13px;
-	position: relative;
-	margin-right: -10000px;
-	top: 2px;
-	left: 2px;
-}
-
-#u402:hover #u404-4
-{
-	padding-top: 4px;
-	padding-bottom: 0px;
-	min-height: 13px;
-	width: 110px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u406
-{
-	width: 120px;
-	background-color: transparent;
-	left: 120px;
-}
-
-#u400,#u401,#u407,#u408
-{
-	width: 120px;
-	background-color: transparent;
-	position: relative;
-}
-
-#u409
-{
-	width: 118px;
-	border-width: 1px;
-	border-style: solid;
-	border-color: #777777;
-	background-color: #FFFFFF;
-	padding-bottom: 4px;
-	position: relative;
-	margin-right: -10000px;
-}
-
-#u402:hover,#u409:hover
-{
-	background-color: #AAAAAA;
-	width: 118px;
-	min-height: 0px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u412-4
-{
-	width: 110px;
-	min-height: 13px;
-	background-color: transparent;
-	padding-left: 2px;
-	padding-top: 4px;
-	padding-right: 2px;
-	font-size: 11px;
-	text-align: center;
-	line-height: 13px;
-	position: relative;
-	margin-right: -10000px;
-	top: 2px;
-	left: 2px;
-}
-
-#u402.MuseMenuActive #u404-4,#u409:hover #u412-4
-{
-	padding-top: 4px;
-	padding-bottom: 0px;
-	min-height: 13px;
-	width: 110px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u409.MuseMenuActive #u412-4
-{
-	padding-top: 4px;
-	padding-bottom: 0px;
-	min-height: 13px;
-	width: 110px;
+	width: 374px;
 	margin: 0px -10000px 0px 0px;
 }
 
 #u391
 {
-	width: 469px;
+	width: 374px;
 	min-height: 52px;
 	background-color: transparent;
 	position: relative;
 	margin-right: -10000px;
-	left: 940px;
+	left: 752px;
 }
 
 #u392
 {
-	width: 469px;
+	width: 374px;
 	background-color: #C4C4C4;
 	padding-bottom: 35px;
 	position: relative;
 }
 
+#u392.MuseMenuActive
+{
+	background-color: #999999;
+	width: 374px;
+	min-height: 0px;
+	margin: 0px;
+}
+
 #u394-4
 {
-	width: 469px;
+	width: 374px;
 	min-height: 17px;
 	border-style: none;
 	border-color: transparent;
@@ -315,12 +200,12 @@
 	left: 0px;
 }
 
-#u392:hover #u394-4
+#u415.MuseMenuActive #u416-4,#u392:hover #u394-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 469px;
+	width: 374px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -329,47 +214,48 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 469px;
+	width: 374px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u392.MuseMenuActive #u394-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 374px;
 	margin: 0px -10000px 0px 0px;
 }
 
 #u419
 {
-	width: 469px;
+	width: 375px;
 	min-height: 52px;
 	background-color: transparent;
 	position: relative;
 	margin-right: -10000px;
-	left: 1411px;
+	left: 1128px;
 }
 
 #u422
 {
-	width: 469px;
+	width: 375px;
 	background-color: #C4C4C4;
 	padding-bottom: 35px;
 	position: relative;
 }
 
-#u392.MuseMenuActive,#u422:hover
+#u422:hover
 {
 	background-color: #999999;
-	width: 469px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u422:active
-{
-	background-color: #6B6B6B;
-	width: 469px;
+	width: 375px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u424-4
 {
-	width: 469px;
+	width: 375px;
 	min-height: 17px;
 	border-style: none;
 	border-color: transparent;
@@ -382,12 +268,12 @@
 	top: 17px;
 }
 
-#u392.MuseMenuActive #u394-4,#u422:hover #u424-4
+#u422:hover #u424-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 469px;
+	width: 375px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -396,22 +282,107 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 469px;
+	width: 375px;
 	margin: 0px -10000px 0px 0px;
 }
 
-#u422.MuseMenuActive #u424-4
+#u978
+{
+	width: 375px;
+	min-height: 52px;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+	left: 1505px;
+}
+
+#u979
+{
+	width: 375px;
+	background-color: #C4C4C4;
+	padding-bottom: 35px;
+	position: relative;
+}
+
+#u979:hover
+{
+	background-color: #999999;
+	width: 375px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u422:active,#u979:active
+{
+	background-color: #6B6B6B;
+	width: 375px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u981-4
+{
+	width: 375px;
+	min-height: 17px;
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	text-align: center;
+	color: #FFFFFF;
+	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
+	position: relative;
+	margin-right: -10000px;
+	top: 17px;
+}
+
+#u422.MuseMenuActive #u424-4,#u979:hover #u981-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 469px;
+	width: 375px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u979:active #u981-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 375px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u979.MuseMenuActive #u981-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 375px;
 	margin: 0px -10000px 0px 0px;
 }
 
 .MenuItem /* unifiedNavBar */
 {
 	cursor: pointer;
+}
+
+#u957-4
+{
+	z-index: 38;
+	width: 1250px;
+	min-height: 36px;
+	background-color: transparent;
+	font-size: 31px;
+	line-height: 37px;
+	margin-left: 315px;
+	margin-top: 75px;
+	position: relative;
+}
+
+#u957
+{
+	font-size: 31px;
 }
 
 #u242-4
@@ -421,7 +392,7 @@
 	min-height: 50px;
 	background-color: transparent;
 	margin-left: 1699px;
-	margin-top: 850px;
+	margin-top: 738px;
 	position: relative;
 }
 
